notification count no longer shifts the entire navbar

--- a/src/styling/Navbar.css
+++ b/src/styling/Navbar.css
@@ -62,6 +62,7 @@
 
 .navbar-user {
   display: flex;
+  position: relative;
 }
 .user-icon {
   font-size: 2em;
@@ -77,6 +78,8 @@
   text-align: center;
   height: 1.3em;
   width: 1.3em;
+  position: absolute;
+  right: -1.5em;
 }
 
 .notification-unread {
